# pythonObject

poetryDemo/: pyproject.toml
poetryDemo/tests/: test_poetrydemo.py
pythonSample/: README.md
pythonSample/algorithm/: __init__.py  string.py
pythonSample/basic/: fileA.py  fileC.py
pythonSample/basic/encodeDemo/: __init__.py  encode_demo.py  gbk1  jis1
pythonSample/basic/importDemo/: fileB.py  fileD.py
pythonSample/basic/importDemo/subFolder/: fileC.py
pythonSample/basic/memoryDemo/: memory_demo.py  ref_count.py
venv-3.7.4/: pyvenv.cfg
venv-3.7.4/Scripts/: Activate.ps1  activate  activate.bat  easy_install-3.7-script.py  easy_install-script.py  pip-script.py  pip3-script.py  pip3.7-script.py
