# 项目简介
[tool.poetry]
name = "poetryDemo"
version = "0.1.0"
description = "a demo for poetry"
authors = ["xuanke <zhouliwei@1989@gmail.com>"]
license = "Apache-2.0"
readme = 'README.md'
repository = "https://github.com/sdispater/poetry"
homepage = "https://github.com/sdispater/poetry"
# 用于上传包之后，可以对包进行关键字检索
keywords = ['', '']

# tool.poetry.dependencies中配置的依赖，默认从Pypi官方下载，加入你想用自己私有的库，可以通过下面参数指定
[[tool.poetry.source]]
name = 'private'
url = 'http://example.com/simple'

# 项目依赖的包，其中有很多种写法
[tool.poetry.dependencies]
python = "~2.7 || ^3.7"
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed，允许预发布版本
pathlib2 = { version = "^2.2", python = "~2.7", allows_prereleases = true }
# Git dependencies，可以直接安装git地址
cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }
# Optional dependencies (extras)
pendulum = { version = "^1.4", optional = true }

# 包含或排除某些文件最终打包到包中。
[tool.poetry]
include = ["package/**/*.py", "package/**/.c"]
exclude = ["package/excluded.py"]

# 开发时依赖的包
[tool.poetry.dev-dependencies]
pytest = "^3.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
